Remove deprecated JVM option MaxPermSize.